--- a/clock-generator/package.json
+++ b/clock-generator/package.json
@@ -16,7 +16,8 @@
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
-    "vitest": "^4.0.15"
+    "vitest": "^4.0.15",
+    "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
     "@types/lodash": "^4.17.17",
