add support for hocon config files

--- a/clock-generator/tsconfig.json
+++ b/clock-generator/tsconfig.json
@@ -8,5 +8,9 @@
     "sourceMap": true,
     "outDir": "dist"
   },
+  "include": ["src/**/*", "src/types/**/*.d.ts"],
+  "ts-node": {
+    "files": true
+  },
   "lib": ["es2015"]
 }
