--- a/clock-generator/package.json
+++ b/clock-generator/package.json
@@ -20,12 +20,14 @@
     "vitest-mock-extended": "^3.1.0"
   },
   "dependencies": {
+    "@pushcorn/hocon-parser": "^1.3.1",
     "@types/lodash": "^4.17.17",
     "chalk": "^5.6.2",
     "csv-writer": "^1.6.0",
     "fractionability": "^2.3.3",
     "lodash": "^4.17.21",
     "mathjs": "^15.1.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^4.2.1"
   }
 }
