add a few more examples

--- a/clock-generator/resources/config-samples/chemical-science-advanced-circuit.conf
+++ b/clock-generator/resources/config-samples/chemical-science-advanced-circuit.conf
@@ -2,10 +2,26 @@
 # Complex multi-machine setup with custom LCM override
 
 overrides {
-    # lcm = 27
+    lcm = 11
     terminal_swing_count = 2
 }
 
+########################################
+# REFERENCES
+########################################
+# machines
+RED_CIRCUIT_EM { type = "machine", id = 1 }
+COPPER_CABLE_FOUNDRY { type = "machine", id = 2 }
+PLASTIC_CRYO_PLANT { type = "machine", id = 3 }
+
+# belt sources
+GREEN_CIRCUIT_BELT { type = "belt", id = 1 }
+COAL_BELT { type = "belt", id = 2 }
+
+# belt sink
+RED_CIRCUIT_BELT { type = "belt", id = 3 }
+
+########################################
 target_output {
     recipe = "advanced-circuit"
     items_per_second = 90
@@ -14,129 +30,85 @@ target_output {
 
 machines = [
     {
-        id = 1
+        id = ${RED_CIRCUIT_EM.id}
         recipe = "advanced-circuit"
         productivity = 175
         crafting_speed = 100.05000114441
-    },
+    }
     {
-        id = 2
-        recipe = "electronic-circuit"
-        productivity = 175
-        crafting_speed = 32.5
-    },
+        id = ${COPPER_CABLE_FOUNDRY.id}
+        recipe = "casting-copper-cable"
+        productivity = 150
+        crafting_speed = 128.9999961853
+    }
     {
-        id = 3
+        id = ${PLASTIC_CRYO_PLANT.id}
         recipe = "plastic-bar"
         productivity = 300
-        crafting_speed = 33.975
-    },
-    {
-        id = 4
-        recipe = "copper-cable"
-        productivity = 175
-        crafting_speed = 55.349998474121
-    },
-    {
-        id = 5
-        recipe = "copper-plate"
-        productivity = 50
-        crafting_speed = 65.999999046326
-        type = "furnace"
-    },
-    {
-        id = 6
-        recipe = "iron-plate"
-        productivity = 50
-        crafting_speed = 86.149997711182
-        type = "furnace"
+        crafting_speed = 117.5
     }
 ]
 
 inserters = [
     {
-        source { type = "machine", id = 2 }
-        sink { type = "machine", id = 1 }
-        stack_size = 16
-        filters = ["electronic-circuit"]
-    },
-    {
-        source { type = "machine", id = 3 }
-        sink { type = "machine", id = 1 }
-        stack_size = 16
-        filters = ["plastic-bar"]
-    },
-    {
-        source { type = "machine", id = 4 }
-        sink { type = "machine", id = 1 }
-        stack_size = 16
-        filters = ["copper-cable"]
-    },
-    {
-        source { type = "machine", id = 4 }
-        sink { type = "machine", id = 2 }
-        stack_size = 16
-        filters = ["copper-cable"]
-    },
-    {
-        source { type = "machine", id = 5 }
-        sink { type = "machine", id = 4 }
-        stack_size = 16
-        filters = ["copper-plate"]
-    },
-    {
-        source { type = "machine", id = 1 }
-        sink { type = "belt", id = 1 }
+        source = ${RED_CIRCUIT_EM}
+        sink = ${RED_CIRCUIT_BELT}
         stack_size = 16
         filters = ["advanced-circuit"]
-    },
+    }
     {
-        source { type = "belt", id = 2 }
-        sink { type = "machine", id = 3 }
+        source = ${GREEN_CIRCUIT_BELT}
+        sink = ${RED_CIRCUIT_EM}
+        stack_size = 16
+        filters = ["electronic-circuit"]
+    }
+    {
+        source = ${PLASTIC_CRYO_PLANT}
+        sink = ${RED_CIRCUIT_EM}
+        stack_size = 16
+        filters = ["plastic-bar"]
+    }
+    {
+        source = ${COAL_BELT}
+        sink = ${PLASTIC_CRYO_PLANT}
         stack_size = 16
         filters = ["coal"]
-    },
-    {
-        source { type = "belt", id = 3 }
-        sink { type = "machine", id = 5 }
-        stack_size = 16
-        filters = ["copper-ore"]
-    },
-    {
-        source { type = "machine", id = 6 }
-        sink { type = "machine", id = 2 }
-        stack_size = 16
-        filters = ["iron-plate"]
-    },
-    {
-        source { type = "belt", id = 3 }
-        sink { type = "machine", id = 6 }
-        stack_size = 16
-        filters = ["iron-ore"]
     }
+    {
+        source = ${COPPER_CABLE_FOUNDRY}
+        sink = ${RED_CIRCUIT_EM}
+        stack_size = 16
+        filters = ["copper-cable"]
+    }
+    {
+        source = ${COPPER_CABLE_FOUNDRY}
+        sink = ${RED_CIRCUIT_EM}
+        stack_size = 16
+        filters = ["copper-cable"]
+    }
+    
 ]
 
 belts = [
     {
-        id = 1
+        id = ${RED_CIRCUIT_BELT.id}
         type = "turbo-transport-belt"
         lanes = [
             { ingredient = "advanced-circuit", stack_size = 4 }
         ]
     },
     {
-        id = 2
+        id = ${COAL_BELT.id}
         type = "turbo-transport-belt"
         lanes = [
             { ingredient = "coal", stack_size = 4 }
         ]
     },
     {
-        id = 3
+        id = ${GREEN_CIRCUIT_BELT.id}
         type = "turbo-transport-belt"
         lanes = [
-            { ingredient = "copper-ore", stack_size = 4 },
-            { ingredient = "iron-ore", stack_size = 4 }
+            { ingredient = "electronic-circuit", stack_size = 4 }
         ]
     }
 ]
