update logistic science example

--- a/clock-generator/resources/config-samples/logistic-science-shared-inserter.conf
+++ b/clock-generator/resources/config-samples/logistic-science-shared-inserter.conf
@@ -2,15 +2,22 @@
 # Produces logistic science packs with 11 machines at 240 items/second
 # Uses a shared inserter for both transport-belt and inserter inputs
 
-target_output {
-    recipe = "logistic-science-pack"
-    items_per_second = 240
-    machines = 11
-}
+# REFERENCES
+## Machines
+SCIENCE_ASM = { type = "machine", id = 1 }
+
+## Belts
+INPUT_BELT = { type = "belt", id = 1 }
+OUTPUT_BELT = { type = "belt", id = 2 }
+
+# CONFIGURATION
+target_output.recipe = "logistic-science-pack"
+target_output.items_per_second = 240
+target_output.machines = 11
 
 machines = [
     {
-        id = 1
+        id = ${SCIENCE_ASM.id}
         recipe = "logistic-science-pack"
         productivity = 100
         crafting_speed = 68.906247615814
@@ -19,14 +26,14 @@ machines = [
 
 inserters = [
     {
-        source { type = "belt", id = 1 }
-        sink { type = "machine", id = 1 }
+        source = ${INPUT_BELT}
+        sink = ${SCIENCE_ASM}
         filters = ["transport-belt", "inserter"]
         stack_size = 16
     },
     {
-        source { type = "machine", id = 1 }
-        sink { type = "belt", id = 1 }
+        source = ${SCIENCE_ASM}
+        sink = ${OUTPUT_BELT}
         filters = ["logistic-science-pack"]
         stack_size = 16
     }
@@ -34,11 +41,18 @@ inserters = [
 
 belts = [
     {
-        id = 1
+        id = ${INPUT_BELT.id}
         type = "turbo-transport-belt"
         lanes = [
             { ingredient = "transport-belt", stack_size = 4 },
             { ingredient = "inserter", stack_size = 4 }
+        ]
+    }
+    {
+        id = ${OUTPUT_BELT.id}
+        type = "turbo-transport-belt"
+        lanes = [
+            { ingredient = "logistic-science-pack", stack_size = 4 }
         ]
     }
 ]
