abuc + claude = front end developer

--- a/clock-generator/package.json
+++ b/clock-generator/package.json
@@ -1,18 +1,37 @@
 {
-  "name": "simulators",
+  "name": "clock-generator",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Factorio clock generator for crafting machines",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.js"
+    },
+    "./browser": {
+      "types": "./dist/browser.d.ts",
+      "import": "./dist/browser.js",
+      "require": "./dist/browser.js"
+    }
+  },
   "scripts": {
-    "start": "tsc && node dist/index.js",
+    "start": "tsc && node dist/multi-machine-poc.js",
     "dev": "nodemon",
+    "build": "tsc",
     "test": "vitest"
   },
-  "keywords": [],
+  "keywords": [
+    "factorio",
+    "clock",
+    "generator"
+  ],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
+    "@types/pako": "^2.0.4",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2",
@@ -26,6 +45,7 @@
     "fractionability": "^2.3.3",
     "lodash": "^4.17.21",
     "mathjs": "^15.1.0",
+    "pako": "^2.1.0",
     "zod": "^4.2.1"
   }
 }
