--- a/clock-generator/tsconfig.json
+++ b/clock-generator/tsconfig.json
@@ -3,12 +3,16 @@
     "strict": true,
     "module": "commonjs",
     "esModuleInterop": true,
-    "target": "es6",
+    "target": "ES2020",
     "moduleResolution": "node",
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+    "declaration": true,
+    "declarationMap": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*", "src/types/**/*.d.ts"],
+  "exclude": ["node_modules"],
   "ts-node": {
     "files": true
   },
