initial commit to try to support multiple machines

--- a/clock-generator/resources/config-samples/chemical-science-advanced-circuit.conf
+++ b/clock-generator/resources/config-samples/chemical-science-advanced-circuit.conf
@@ -25,7 +25,7 @@ RED_CIRCUIT_BELT { type = "belt", id = 3 }
 target_output {
     recipe = "advanced-circuit"
     items_per_second = 90
-    machines = 2
+    copies = 2
 }
 
 machines = [
