--- a/clock-generator/resources/config-samples/logistic-science-inserter-crafting.conf
+++ b/clock-generator/resources/config-samples/logistic-science-inserter-crafting.conf
@@ -33,7 +33,7 @@ overrides {
 target_output {
     recipe = "inserter"
     items_per_second = 240
-    machines = 3
+    copies = 3
 }
 
 machines = [
