--- a/clock-generator/resources/config-samples/logistic-science-shared-inserter.conf
+++ b/clock-generator/resources/config-samples/logistic-science-shared-inserter.conf
@@ -13,7 +13,7 @@ OUTPUT_BELT = { type = "belt", id = 2 }
 # CONFIGURATION
 target_output.recipe = "logistic-science-pack"
 target_output.items_per_second = 240
-target_output.machines = 11
+target_output.copies = 11
 
 machines = [
     {
