--- a/clock-generator/resources/config-samples/production-science-shared-custom-config.json
+++ b/clock-generator/resources/config-samples/production-science-shared-custom-config.json
@@ -2,7 +2,7 @@
   "target_output": {
     "recipe": "production-science-pack",
     "items_per_second": 120,
-    "machines": 7
+    "copies": 7
   },
   "machines": [
     {
