--- a/clock-generator/resources/config-samples/sample-config.conf
+++ b/clock-generator/resources/config-samples/sample-config.conf
@@ -24,7 +24,7 @@ target_output {
     items_per_second = 240
     
     # Number of machines working on this recipe
-    machines = 11
+    copies = 11
 }
 
 # -----------------------------------------------------------------------------
