--- a/clock-generator/resources/config-samples/utility-science.conf
+++ b/clock-generator/resources/config-samples/utility-science.conf
@@ -4,7 +4,7 @@
 target_output {
     recipe = "utility-science-pack"
     items_per_second = 120
-    machines = 7
+    copies = 7
 }
 
 machines = [
