--- a/clock-generator/resources/config-samples/logistic-science.conf
+++ b/clock-generator/resources/config-samples/logistic-science.conf
@@ -4,7 +4,7 @@
 target_output {
     recipe = "logistic-science-pack"
     items_per_second = 240
-    machines = 11
+    copies = 11
 }
 
 machines = [
