--- a/clock-generator/resources/config-samples/production-science-shared.conf
+++ b/clock-generator/resources/config-samples/production-science-shared.conf
@@ -4,7 +4,7 @@
 target_output {
     recipe = "production-science-pack"
     items_per_second = 120
-    machines = 7
+    copies = 7
 }
 
 machines = [
