rename to clock generator sidecar

--- a/clock-generator-sidecar/locale/en/locale.cfg
+++ b/clock-generator-sidecar/locale/en/locale.cfg
@@ -7,8 +7,8 @@ crafting-speed-analyzer=Select machines to extract crafting speeds and productiv
 [shortcut-name]
 crafting-speed-analyzer-shortcut=Crafting Speed Analyzer
 
-[crafting-speed-extractor]
-gui-title=Crafting Speed Extractor
+[clock-generator-sidecar]
+gui-title=Clock Generator Sidecar
 machine-count=__1__ machines selected
 no-machines=No machines with active recipes found in selection.
 no-machines-selected=No machines with active recipes found. Make sure machines have recipes set.
