determine belts for inserters

--- a/clock-generator-sidecar/locale/en/locale.cfg
+++ b/clock-generator-sidecar/locale/en/locale.cfg
@@ -9,7 +9,7 @@ crafting-speed-analyzer-shortcut=Crafting Speed Analyzer
 
 [clock-generator-sidecar]
 gui-title=Clock Generator Sidecar
-machine-count=__1__ machines selected
+entity-count=__1__ entities selected
 no-machines=No machines with active recipes found in selection.
 no-machines-selected=No machines with active recipes found. Make sure machines have recipes set.
 machines-found=Found __1__ machines with active recipes.
