change reference names to clock-generator-sidecar

--- a/clock-generator-sidecar/locale/en/locale.cfg
+++ b/clock-generator-sidecar/locale/en/locale.cfg
@@ -1,11 +1,11 @@
 [item-name]
-crafting-speed-analyzer=Crafting Speed Analyzer
+clock-generator-sidecar=Clock Generator Sidecar
 
 [item-description]
-crafting-speed-analyzer=Select machines to extract crafting speeds and productivity bonuses. Use the shortcut (ALT+E) or toolbar button for quick access.
+clock-generator-sidecar=Select machines to extract crafting speeds and productivity bonuses. Use the shortcut (ALT+E) or toolbar button for quick access.
 
 [shortcut-name]
-crafting-speed-analyzer-shortcut=Crafting Speed Analyzer
+clock-generator-sidecar-shortcut=Clock Generator Sidecar
 
 [clock-generator-sidecar]
 gui-title=Clock Generator Sidecar
