fix linting errors

--- a/clock-generator-ui/package.json
+++ b/clock-generator-ui/package.json
@@ -8,6 +8,7 @@
     "build": "npm run build:deps && tsc -b && vite build",
     "build:deps": "cd ../clock-generator && npm ci && npm run build",
     "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "preview": "vite preview"
   },
   "dependencies": {
